# SecureKeyManagement-with-TPM

./: README.md  errors_stat.md  setup_app.sh
project/: CMakeLists.txt  clear_tpm_lockout.sh  post_process_supervisor_conf.py  setup_tpm_all_set.sh  setup_tpm_not_set.sh  supervisord_relative.conf  test_kms.sh
project/src/: client_main.cpp  handlers.cpp  handlers.h  key_manager.cpp  key_manager.h  key_manager_.cpp  key_manager__.cpp  kms_client.cpp  kms_client.h  logger.cpp  logger.h  server_main.cpp  ssl_helpers.h  utils.cpp  utils.h
